# Fast_Reader_GTK

./: CMakeLists.txt  FastReader.c  FastReader.cpp  README-DE.md  README.de.md  README.md  README_de.md  SpeedReader DE-DE.c  SpeedReader EN-EN.c  SpeedReader.c  meson.build
locale/de/LC_MESSAGES/: FastReader.mo  FastReader.po  speedreader.mo  speedreader.po
locale/en/LC_MESSAGES/: FastReader.mo  FastReader.po  speedreader.mo  speedreader.po
src/: FastReader.cpp  FastReader.po  text.po
src/assets/: fastreader.desktop.in  io.github.quantum_mutnauq.fast_reader_gtk.gschema.xml  metainfo.xml
src/locale/: it.po
src/locale/de/LC_MESSAGES/: FastReader.po
src/locale/en/LC_MESSAGES/: FastReader.po
src/locale/it/LC_MESSAGES/: FastReader.po
